# SailawayNMEA_pi

./: CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  README.md  SailawayNMEA.fbp
.circleci/: config.yml
ci/: circleci-build-macos.sh
cmake/: TemplateVersion
data/pictures/: SAILAWAYNMEA.html
flatpak/: org.opencpn.OpenCPN.Plugin.sailawaynmea.yaml
libs/api-16/: ocpn_plugin.h
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  SailawayNMEA_pi.pot  it_IT.po
src/: InstrumentsData.cpp  InstrumentsData.h  NMEASentenceGenerator.cpp  NMEASentenceGenerator.h  NavFunc.cpp  NavFunc.h  SailawayNMEA_pi.cpp  SailawayNMEA_pi.h  SailawayNMEAgui.cpp  SailawayNMEAgui.h  SailawayNMEAgui_impl.cpp  SailawayNMEAgui_impl.h  icons.cpp  icons.h  ocpn_plugin.h  tidetable.h
